[package]
name = "proxy_checker"
version = "0.3.0"
edition = "2021"
rust-version = "1.58"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"


[dependencies]
reqwest = { version = "0.11", features = ["socks", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }


